fix: scrollbar color

--- a/src/routes/app.scss
+++ b/src/routes/app.scss
@@ -9,6 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
 	:root {
+		color-scheme: dark;
 		--text-color: #fff;
 		--background-color: #121212;
 		--border-color: #363636;
